src/objects/c2g__AccountingSummarization2__c.object
<CustomObject>
    <description>An internal object that stores data generated by the summarization process.</description>
    <fields>
        <fullName>c2g__AccountCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency Code ID</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_AccCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCurrencyCodeName__c</fullName>
        <label>Account Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingTotal__c</fullName>
        <label>Transaction Account Outstanding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <label>Transaction Line Account Outstanding Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <label>Transaction Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountType__c</fullName>
        <label>Transaction Line Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <label>Transaction Line Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrencyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency ID</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Acc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrencyName__c</fullName>
        <label>Accounting Currency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand01Count__c</fullName>
        <label>Aged Band 01 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand01__c</fullName>
        <label>Aged Band 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand02Count__c</fullName>
        <label>Aged Band 02 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand02__c</fullName>
        <label>Aged Band 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand03Count__c</fullName>
        <label>Aged Band 03 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AgedBand03__c</fullName>
        <label>Aged Band 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Transaction Line Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliationStatus__c</fullName>
        <label>Transaction Line Bank Rec Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry ID</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryName__c</fullName>
        <label>Cash Entry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOverdue__c</fullName>
        <label>Transaction Line Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 ID</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Name__c</fullName>
        <label>Dimension 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Value__c</fullName>
        <label>Transaction Line Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 ID</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Name__c</fullName>
        <label>Dimension 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Value__c</fullName>
        <label>Transaction Line Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 ID</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Name__c</fullName>
        <label>Dimension 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Value__c</fullName>
        <label>Transaction Line Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency Code ID</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Doc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrencyCodeName__c</fullName>
        <label>Document Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingTotal__c</fullName>
        <label>Transaction Document Outstanding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <label>Transaction Line Doc Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference2__c</fullName>
        <label>Transaction Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Transaction Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxTotal__c</fullName>
        <label>Transaction Line Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTotal__c</fullName>
        <label>Transaction Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <label>Transaction Line Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency Code ID</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Dual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualCurrencyCodeName__c</fullName>
        <label>Dual Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <label>Transaction Line Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValueTotal__c</fullName>
        <label>Transaction Dual Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Transaction Line Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Transaction Line Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account ID</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountName__c</fullName>
        <label>General Ledger Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountValue__c</fullName>
        <label>Transaction Line GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency Code ID</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Home</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCurrencyCodeName__c</fullName>
        <label>Home Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <label>Transaction Line Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValueTotal__c</fullName>
        <label>Transaction Home Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Transaction Line Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__JournalID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal ID</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__JournalName__c</fullName>
        <label>Journal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LineReference__c</fullName>
        <label>Transaction Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                    <default>true</default>
                    <label>Analysis</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <label>Transaction Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Proposed Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Line On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompanyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company ID</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompanyName__c</fullName>
        <label>Owner Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNoteID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note ID</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNoteName__c</fullName>
        <label>Payable Credit Note Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoiceID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice ID</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoiceName__c</fullName>
        <label>Payable Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period ID</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodName__c</fullName>
        <label>Period Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProductID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RowCount__c</fullName>
        <label>Row Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__RunInstance__c</fullName>
        <label>Run Instance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNoteID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note ID</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNoteName__c</fullName>
        <label>Sales Credit Note Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice ID</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceName__c</fullName>
        <label>Sales Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SummarizationTemplateID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template ID</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SummarizationTemplateName__c</fullName>
        <label>Summarization Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Transaction Line Items Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction ID</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineCreatedDate__c</fullName>
        <label>Transaction Line Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItemID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item ID</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItemName__c</fullName>
        <label>Transaction Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionName__c</fullName>
        <label>Transaction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UserName__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__VendorDocumentNumber__c</fullName>
        <label>Transaction Vendor Document Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <label>Transaction Years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Summarization</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Accounting Summarization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Summarizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>